--- a/index.html
+++ b/index.html
@@ -197,13 +197,14 @@
 
     let getWizardX = function (gameFieldWidth) {
         return (gameFieldWidth - wizardWidth) / 2;
-    }
+    };
 
     let getWizardY = function (gameFieldHeight) {
         return gameFieldHeight / 3;
-    }
+    };
 
 </script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
