--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     let getFireballSpeed = function (isMovingLeft) {
         return isMovingLeft ? 2 : 5;
     };
-    
+
     let getWizardHeight = function () {
       return 1.337 * wizardWidth;
     };
@@ -206,6 +206,7 @@
 </script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
+<script src="js/setup.js"></script>
 
 </body>
 </html>
